# openmm-napshift

./: .gitignore  CMakeLists.txt  README.md
environments/: build.yml  openmmnapshift-1.0.0-py311hfe2ebbc_0.conda  openmmnapshift-1.0.0.conda  openmmnapshift-1.0.1-py311hfe2ebbc_0.conda  openmmnapshift-1.0.2-py311hfe2ebbc_0.conda  openmmnapshift-1.0.3-py311hfe2ebbc_0.conda  openmmnapshift-1.0.4-py311hfe2ebbc_0.conda  openmmnapshift-1.0.5-py311hfe2ebbc_0.conda  openmmnapshift-1.0.6-py311hfe2ebbc_0.conda  openmmnapshift-1.0.7-py311hfe2ebbc_0.conda  pycamcoil-1.0.0-py_0.conda  run.yml
environments/packaging/: bld.bat  build.sh  conda-build-out.txt  conda_build_config.yaml  meta.yaml
environments/packaging_cuda_11_8/: build.sh
openmmapi/include/: NapShiftForce.h  NapShiftKernels.h
openmmapi/include/internal/: NapShiftForceImpl.h  windowsExportNapShift.h
openmmapi/src/: NapShiftForce.cpp  NapShiftForceImpl.cpp
python/: CMakeLists.txt  MANIFEST.in  setup.py
python/openmmnapshift/: openmmnapshift.i  utils.py
python/openmmnapshift.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/openmmnapshift/PytorchModels/: CA.pt  all_atom.pt  martini.pt
serialization/include/: NapShiftForceProxy.h
serialization/src/: NapShiftForceProxy.cpp  NapShiftSerializationProxyRegistration.cpp
tutorials/: CA_tutorial.ipynb  TEST_MULTI_CS.ipynb  TEST_MULTI_CS.py  all_atom_tutorial.ipynb  build_and_test.sh  create_input_files.ipynb  martini_tutorial.ipynb  showcase_replica_averaging.py  test_cpp_side_replicas.py  tutorial.ipynb  utils.py
tutorials/Data/: CALVADOS_parameters.csv
tutorials/Data/1DJF/: CS.txt  RC_CS.txt
tutorials/Data/2ND3/: 26046_CS_0.txt  CS.txt  molecule_0.itp  system.gro  system.top
tutorials/Data/8K6Z/: CS.list  CS.txt  RC_CS.txt  combined_CS.txt  half_helix_1.txt  half_helix_2.txt
tutorials/Data/8K6Z/TEST_DUAL_WELL/: vis.vmd
tutorials/Data/8K6Z/showcase_replica_averaging/: vis.vmd
tutorials/Data/MartiniForceField/: minimization.mdp
tutorials/Data/ShortHelix/: CS.txt  system.gro  system.top
